# wax

./: .gitignore  .gitmodules  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  Package.resolved  Package.swift  README.es.md  README.ja.md  README.md  README.pt.md  WAX_TECHNICAL_ANALYSIS.md  issue61_snapshot.md
.github/workflows/: deploy-website.yml  quality-gates.yml  release-waxmcp.yml  waxcore-linux.yml
Resources/WaxDemo/: Package.swift
Resources/docs/: Benchmarks.md  wax-mcp-setup.md
Resources/hermes/: DEPLOY.md  README.md
Resources/locales/: README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt.md  README.zh-CN.md
Resources/npm/waxmcp/plugins/hermes/: __init__.py  hermes_wax_memory.py  plugin.yaml  pyproject.toml
Resources/scripts/: build-waxmcp-binaries.sh  generate-docs.sh  release-waxmcp.sh  sync-waxmcp-version.sh
Resources/website/: docusaurus.config.js
Sources/Wax/: BuiltInEmbeddings.swift  FrameStore.swift  Memory.swift  MemorySemantics.swift  MultimodalEmbeddingProvider.swift  StoreLockProbe.swift  TextSearchSession.swift  (+4 more)
docs/: Benchmarks.md  framework-audit-2026-03-06.md  openclaw-native-memory.md
locales/: README.es.md  README.ja.md  README.ko.md  README.pt.md  README.zh-CN.md
scripts/: benchmark-openclaw-memory.sh  build-waxmcp-binaries.sh  bump-version.sh  convert_arctic_embed.py  publish-all.sh  release-all.sh  release-waxmcp.sh  validate-congruency.sh  verify-openclaw-adapter.sh  verify-openclaw-native-memory.sh  verify-waxmcp-http-tests.sh  verify-waxmcp-http.sh
tasks/: audit-200-remediation-ledger.md  lessons.md  todo.md
(+388 files in other folders)
